chore: remove cached pycache files from git tracking

--- a/apps/mfe-garage/src/app/parts-sniper/results-grid/components/offer-details-sheet.component.html
+++ b/apps/mfe-garage/src/app/parts-sniper/results-grid/components/offer-details-sheet.component.html
@@ -19,7 +19,7 @@
                            <span class="font-bold">{{ 'results.score' | translate }}</span>
                            <span class="text-lg font-bold">{{ currentOffer.aiScore }}/100</span>
                        </div>
-                       <p>{{ getReasoning(currentOffer) }}</p>
+                       <p>{{ aiReasoning() }}</p>
                    </div>
                  }
              </div>
