--- a/apps/mfe-garage/src/app/parts-sniper/search-config/search-config.component.html
+++ b/apps/mfe-garage/src/app/parts-sniper/search-config/search-config.component.html
@@ -15,6 +15,7 @@
   <lifeos-search-config-form
     [categories]="categories()"
     [locations]="locations()"
+    [personas]="personas()"
     (configAdded)="onAddConfig($event)"
     (openCategoryDialog)="openAddCategoryDialog()"
     (openLocationDialog)="openAddLocationDialog()">
