--- a/apps/shell/src/app/layout/sidebar/sidebar.component.html
+++ b/apps/shell/src/app/layout/sidebar/sidebar.component.html
@@ -54,6 +54,16 @@
                             <span>{{ 'nav.knowledge' | translate }}</span>
                         </a>
                     </li>
+                    <li hlmSidebarMenuItem>
+                        <a
+                            routerLink="/personas"
+                            routerLinkActive="text-sidebar-accent-foreground bg-sidebar-accent"
+                            hlmSidebarMenuButton
+                        >
+                            <ng-icon hlm name="lucideUsers" />
+                            <span>{{ 'nav.personas' | translate }}</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </hlm-sidebar-group>
